# kakaocloud-openapi-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: api-researcher.md  mcp-developer.md  mcp-tester.md
.claude/skills/api-research/: SKILL.md
.claude/skills/kakaocloud-mcp-orchestrator/: SKILL.md
.claude/skills/kakaocloud-mcp-orchestrator/references/: kakaocloud-api-structure.md
.claude/skills/mcp-development/: SKILL.md
src/kakaocloud_mcp/: server.py
src/kakaocloud_mcp/data/: loader.py
src/kakaocloud_mcp/data/services/: bcs.json  bns-load-balancer.json  bns-transit-gateway.json  container-pack.json
src/kakaocloud_mcp/resources/: services.py
src/kakaocloud_mcp/tools/: auth.py  detail.py  overview.py  search.py  workflow.py
src/kakaocloud_mcp/utils/: search.py
src/kakaocloud_openapi_mcp/: __init__.py  server.py
src/kakaocloud_openapi_mcp/data/: auth.json  loader.py  workflows.json
src/kakaocloud_openapi_mcp/data/services/: bcs.json  bns-load-balancer.json  bns-vpc.json  data-store-mysql.json
src/kakaocloud_openapi_mcp/resources/: services.py
src/kakaocloud_openapi_mcp/tools/: auth.py  detail.py  overview.py  search.py  workflow.py
tests/: test_search.py  test_tools.py
