[project]
name = "kakaocloud-mcp"
version = "0.1.0"
description = "KakaoCloud OpenAPI MCP server - AI 코딩 어시스턴트를 위한 카카오클라우드 API 문서 제공"
readme = "README.md"
authors = [
    { name = "chals.chu", email = "chals.chu@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
kakaocloud-mcp = "kakaocloud_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
